# IrrigationMonitoring

./: .deepsource.toml  .gitignore  .gitmodules  README.md  defines.h  info  monitor.py  msg_definitions.h  nrf24l01_compile.sh  nrf24l01_python_wrapper.cpp  plants_group1_schedule.xml  plants_group2_schedule.xml  plants_group3_schedule.xml  python_wrappers.cpp  system_builder.py  wireless_comm_lib_compile.sh
Dashboard/: monitor_sim.py  webpage.py
Dashboard/static/: battery.css  data_parser.js  progress-bar.css
Dashboard/templates/: circular-progress-bar.css  index.html
Drivers/: CMakeLists.txt  communication_base.cpp  communication_base.h  defines.h  nrf24l01.cpp  nrf24l01.h  nrf24l01_compile.sh  nrf24l01_ext_compile.sh  nrf24l01_python_wrapper.cpp  nrf24l01_run.sh  nrf24l01_test.cpp  nrf24l01_test.h  nrf24l01_test_compile.sh  nrf24l01_test_wrapper.cpp
SystemBuilder/: __init__.py  system_builder.py
